--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ BLOCKCHAIN</h5>
                     <div class="screenshot">
                         <li class="center-block">
                             <div class="team-staff">
-                                <img src="assets/images/team/ric.jpg" class="img-responsive" alt="">
+                                <img src="images/team/New/Mesa%20de%20trabajo%203.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
                                         <h4 class="team_img">RICARDO TORICES <span>Director de Producto</span></h4>
@@ -502,7 +502,22 @@ BLOCKCHAIN</h5>
                     <div class="screenshot">
                         <li class="center-block">
                             <div class="team-staff">
-                                <img src="assets/images/team/mike.jpg" class="img-responsive" alt="">
+                                <img src="images/team/New/Mesa%20de%20trabajo%201.jpg" class="img-responsive" alt="">
+                                <div class="team-overlay">
+                                    <div class="team-overlay-inner text-center">
+                                        <h4 class="team_img">JULIÁN CARDONA <span>Director Comercial</span></h4>
+                                        <div class="team-social">
+                                            <a href="https://www.linkedin.com/in/julianmcardona/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="screenshot">
+                        <li class="center-block">
+                            <div class="team-staff">
+                                <img src="images/team/New/Mesa%20de%20trabajo%204.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
                                         <h4 class="team_img">MIGUEL ÁNGEL ESPINOSA<span>Director General</span></h4>
@@ -518,7 +533,7 @@ BLOCKCHAIN</h5>
                     <div class="screenshot">
                         <li class="center-block">
                             <div class="team-staff">
-                                <img src="assets/images/team/serch.jpg" class="img-responsive" alt="">
+                                <img src="images/team/New/Mesa%20de%20trabajo%202.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
                                         <h4 class="team_img">SERGIO ORTIZ <span>Director de Arquitectura</span></h4>
@@ -536,7 +551,7 @@ BLOCKCHAIN</h5>
                     <div class="screenshot">
                         <li class="center-block">
                             <div class="team-staff">
-                                <img src="assets/images/team/cass.jpg" class="img-responsive" alt="">
+                                <img src="images/team/New/Mesa%20de%20trabajo%205.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
                                         <h4 class="team_img">CASSANDRA CÁZARES<span>Lider de Marketing</span></h4>
@@ -552,7 +567,7 @@ BLOCKCHAIN</h5>
                     <div class="screenshot">
                         <li class="center-block">
                             <div class="team-staff">
-                                <img src="assets/images/team/alex.jpg" class="img-responsive" alt="">
+                                <img src="images/team/New/Mesa%20de%20trabajo%206.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
                                         <h4 class="team_img">ALEJANDRO RODRÍGUEZ <span>Director de producto Biométrico</span></h4>
