--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ window.onclick = function(event) {
         <div class="container">
             <div class="row">
                 <div data-tilt class="hello3 fadeInLeft spacecon wow">
-                    <iframe class="classchiq hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="classchiq hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/Sif73YmvkPc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
@@ -301,7 +301,7 @@ window.onclick = function(event) {
                     </div>
                 </div>
                 <div data-tilt class="hello3 fadeInLeft spacecon wow">
-                    <iframe class="classchiq hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="classchiq hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/gJ1E0pw9MBs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
             </div>
