--- a/index.html
+++ b/index.html
@@ -490,10 +490,10 @@ BLOCKCHAIN</h5>
                                 <img src="images/team/New/Mesa%20de%20trabajo%203.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
-                                        <h4 class="team_img">RICARDO TORICES <span>Director de Producto</span></h4>
-                                        <div class="team-social">
-                                            <a href="https://www.linkedin.com/in/ricardo-torices-4bb58651/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                                        </div>
+                                        <h4 class="team_img">RICARDO TORICES <span>Director de Producto Biométrico</span></h4>
+                                    </div>
+                                    <div class="team-social">
+                                        <a href="https://www.linkedin.com/in/ricardo-torices-4bb58651/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -505,10 +505,10 @@ BLOCKCHAIN</h5>
                                 <img src="images/team/New/Mesa%20de%20trabajo%201.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
-                                        <h4 class="team_img">JULIÁN CARDONA <span>Director Comercial</span></h4>
-                                        <div class="team-social">
-                                            <a href="https://www.linkedin.com/in/julianmcardona/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                                        </div>
+                                        <h4 class="team_img">JULÍAN CARDONA <span>Director Comercial</span></h4>
+                                    </div>
+                                    <div class="team-social">
+                                        <a href="https://www.linkedin.com/in/julianmcardona/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -570,7 +570,6 @@ BLOCKCHAIN</h5>
                                 <img src="images/team/New/Mesa%20de%20trabajo%206.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
-                                        <h4 class="team_img">ALEJANDRO RODRÍGUEZ <span>Director de producto Biométrico</span></h4>
                                         <div class="team-social">
                                             <a href="https://www.linkedin.com/in/edgar-alejandro-rodriguez-zavala-99304466/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
