--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@ BLOCKCHAIN</h5>
                                 <img src="images/team/New/Mesa%20de%20trabajo%206.jpg" class="img-responsive" alt="">
                                 <div class="team-overlay">
                                     <div class="team-overlay-inner text-center">
+                                        <h4 class="team_img">ALEJANDRO RODRÍGUEZ<span>Director de Blockchain</span></h4>
                                         <div class="team-social">
                                             <a href="https://www.linkedin.com/in/edgar-alejandro-rodriguez-zavala-99304466/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
