Ajuste de carrueles Slick rotos

--- a/index.html
+++ b/index.html
@@ -770,15 +770,16 @@
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.0.min.js"></script>
-    <script src="/assets/js/owl.carousel.min.js"></script>
     <script src="js/circliful.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/isotope.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/tilt.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/counterup.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 <!-- Facebook Pixel Code -->
