--- a/_pgbackup/single_1626200356.html
+++ b/_pgbackup/single_1626200356.html
@@ -49,7 +49,7 @@
         </section>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="index.html"> <img src="images/logo.png" alt="logo" width="153"></a>
+                <a class="navbar-brand" href="index.html"> <img src="images/logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -128,20 +128,24 @@
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     Category: 
+
                                     <a href="#">Design</a>
                                 </li>
                                 <li class="list-inline-item">
                                     Tags: 
+
                                     <a href="#">Design,</a>
                                     <a href="#">Trend,</a>
                                     <a href="#">App</a>
                                 </li>
                                 <li class="list-inline-item">
                                     Comments: 
+
                                     <a href="#">25</a>
                                 </li>
                                 <li class="list-inline-item">
                                     Read: 
+
                                     <a href="#">1200</a>
                                 </li>
                             </ul>
@@ -327,67 +331,29 @@
                 </div>
             </div>
         </div>
-        <footer class="site-footer" style="background-color: #1c7ff4; height: 100%; margin-top: 2614px;">
-            <section class="anim">
-                <div class="wave wave1"></div>
-                <div class="wave wave2"></div>
-                <div class="wave wave3"></div>
-                <div class="wave wave4"></div>
-            </section>
-            <div class="diciofoot diciofootsm">
-                <div class="footer">
-                    <li class="footer2 footersm">
-                        <a href="index.html">Inicio</a>
+        <footer class="site-footer">
+            <div class="col-sm-12 text-center">
+                <img src="images/logo-alt.png" alt="logo">
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="#">Home</a>
                     </li>
-                    <li class="footer2 footersm ">
-                        <a href="#features3">Productos</a>
+                    <li class="list-inline-item">
+                        <a href="#">Services</a>
                     </li>
-                    <li class="footer2 footersm ">
-                        <a href="Notice.html" target="_blank">Aviso de privacidad</a>
+                    <li class="list-inline-item">
+                        <a href="#">Portfolio</a>
                     </li>
-                    <li class="footer2 footersm ">
-                        <a href="#cta">Contacto</a>
+                    <li class="list-inline-item">
+                        <a href="#">Feedback</a>
                     </li>
-                </div>
+                    <li class="list-inline-item">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
             </div>
-            <div class="logofoot">
-                <img src="images/logo-alt.svg" alt="logo" width="300" class="imgfo">
-            </div>
-            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <column class="Foot">
-                <div class="dicio ¡">
-                    <div class="¡">
-                        <div>
-                            <div class="redes">
-                                <div class="redes_icon">
-                                    <a href="https://www.linkedin.com/company/34744323/admin/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                                </div>
-                                <div class="redes_icon">
-                                    <a href="https://twitter.com/Dicio_AI" target="_blank"><i class="fa fa-twitter"></i></a>
-                                </div>
-                                <div class="redes_icon">
-                                    <a href="https://www.facebook.com/Dicioai" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                                </div>
-                                <div class="redes_icon">
-                                    <a href="https://www.instagram.com/dicio.ai/" target="_blank"><i class="fa fa-instagram"></i></a>
-                                </div>
-                                <div class="redes_icon">
-                                    <a href="https://www.youtube.com/channel/UCJ_8A6YXEs2XxAj3cL9-DEg" target="_blank"><i class="fa fa-youtube"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </column>
-            <column class="Foot">
-                <div class=" dicio2">
-                    <p class="textfoot">info@dicio.ai</p>
-                    <p class="textfoot">Piso 2, iOS Offices, Miyanna Av. Ejército Nacional 769 Granada, Miguel Hidalgo
-                    11520, CDMX</p>
-                </div>
-            </column>
             <div class="footer-copyright">
-                <p>Copyright &copy; DICIO 2021. All Right Reserved</p>
+                <p>Copyrighs @ Bongo Beyond 2019</p>
             </div>
         </footer>
         <div id="backtotop">
