--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="d-block d-sm-none space spacesm" style="height: 60px"></div>
                     <div class="section-title">
                         <h4 style="color: #0883f5; font-size: 30px;">Acerca de nosotros</h4>
-                        <h1>Pilares</h1>
+                        <h1>Pilares de negocio</h1>
                     </div>
                     <p style="text-align: justify;">Desarrollamos herramientas seguras, inteligentes y altamente
                     competitivas para facilitar las interacciones digitales de nuestros clientes.</p>
@@ -281,7 +281,7 @@
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
                             <p style="text-align: justify;">Da la opción a tus clientes de abrir una cuenta bancaria de
-                            forma fácil, sencilla y sin la necesidad de acudir a una sucursal.</p>
+                            forma fácil, sencilla y sin la necesidad de acudir a una sucursal. Validando su identidad de forma inmediata con acreditación por la Secretaría de Economía y cumpliendo con la NOM 151</p>
                         </div>
                     </div>
                 </div>
