Ajuste de campo Emprresa en el formulario

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                             <input type="text" class="form-control" placeholder="Télefono" name="phone" id="phone">
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" placeholder="Empresa" name="empresa" id="empresa">
+                            <input type="text" class="form-control" placeholder="Empresa" name="company" id="company">
                         </div>
                         <div class="col-md-12">
                             <textarea class="form-control" rows="3" name="message" id="message"></textarea>
