--- a/_pgbackup/Notice_1626708032.html
+++ b/_pgbackup/Notice_1626708032.html
@@ -53,7 +53,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="logo" href="index.html"> </a>
+                            <a class="logo" href="index.html">   </a>
                         </div>
                         <div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
                             <ul class="nav navbar-nav nav-pos-right navbar-left nav-split">
@@ -96,9 +96,9 @@
             <!-- Feature #3
 		============================================= -->
             <section class="new_c newc newsect newx sect">
-                <div style="text-align: left; background-color: #ffffff; resize: both; margin: auto; padding: 0px;">
-                    <div class=" notice">
-                        <div class="heading heading-1 mb-60 text--center wow fadeInUp animated" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none; width: 100%; margin: auto;">
+                <div style="text-align: left; height: 100%; background-color: #ffffff; padding-top: 0px; visibility: visible; vertical-align: middle; resize: both; object-fit: fill; margin: 8px 0 79px; display: inherit; width: 100%;">
+                    <div class="container" style="width: 80%;">
+                        <div class="heading heading-1 mb-60 text--center wow fadeInUp animated" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none; margin-top: 35px; width: 100%; margin-right: 0;">
                             <div data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-name: none; padding-top: 0px;">
                                 <h2><p><strong>AVISO </strong><strong>DE </strong><strong>PRIVACIDAD INTEGRAL TRANSMISIÓN Y VISIÓN DIGITAL, S.A. DE C.V.</strong></p></h2>
                                 <p style="font-family: 'Mulish', sans-serif;"><p class="texx">El presente aviso establece el compromiso de protección de datos personales de TRANSMISIÓN Y VISIÓN DIGITAL, S.A. de C.V. (&ldquo;Transmisión y Visión Digital&rdquo;), relativa a la obtención, protección, tratamiento y transferencia de los Datos Personales en posesión de Transmisión y Visión Digital.</p><p style="text-align: left;">Transmisión y Visión Digital se obliga específicamente a: (i) tratar los datos personales de los titulares exclusivamente para la realización de los fines establecidos en el presente Aviso, (ii) observar los principios de protección de datos personales de licitud, consentimiento, información, calidad, finalidad, lealtad, proporcionalidad y responsabilidad, así como los deberes de cuidado y confidencialidad previstos en la Disposiciones Aplicables en Materia de Datos Personales, e (iii) implementar y mantener las medidas de seguridad administrativas, técnicas y físicas que permitan proteger los datos personales de los titulares contra daño, perdida, alteración, destrucción o el uso, acceso o tratamiento no autorizados.</p></p>
@@ -136,7 +136,6 @@
                 </div>
                 <!-- .container end -->
             </section>
-            <div class="space" style="margin: auto;"></div>
             <div id="backtotop">
                 <i class="fa fa-2x fa-long-arrow-up"></i>
             </div>
@@ -193,7 +192,7 @@ de tu empresa.</h1>
                             <a href="Notice.html" target="_blank">Aviso de privacidad</a>
                         </li>
                         <li class="footer2">
-                            <a href="#contact">Contacto</a>
+                            <a href="#cta">Contacto</a>
                         </li>
                     </div>
                 </div>
