--- a/_pgbackup/Notice_1626709856.html
+++ b/_pgbackup/Notice_1626709856.html
@@ -96,8 +96,8 @@
             <!-- Feature #3
 		============================================= -->
             <section class="new_c newc newsect newx sect">
-                <div style="text-align: left; background-color: #ffffff; resize: both; margin: auto; padding: 0px;">
-                    <div class=" notice">
+                <div style="text-align: left; height: 100%; background-color: #ffffff; padding-top: 0px; visibility: visible; vertical-align: middle; resize: both; object-fit: fill; margin: 8px 0 79px; display: inherit; width: 100%;">
+                    <div class="container" style="width: 80%; margin: auto auto 2638px; height: 763px;">
                         <div class="heading heading-1 mb-60 text--center wow fadeInUp animated" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none; width: 100%; margin: auto;">
                             <div data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-name: none; padding-top: 0px;">
                                 <h2><p><strong>AVISO </strong><strong>DE </strong><strong>PRIVACIDAD INTEGRAL TRANSMISIÓN Y VISIÓN DIGITAL, S.A. DE C.V.</strong></p></h2>
@@ -136,7 +136,6 @@
                 </div>
                 <!-- .container end -->
             </section>
-            <div class="space" style="margin: auto;"></div>
             <div id="backtotop">
                 <i class="fa fa-2x fa-long-arrow-up"></i>
             </div>
