--- a/index.html
+++ b/index.html
@@ -633,7 +633,6 @@
                         <div class="col-md-6">
                             <input type="text" class="form-control" placeholder="Empresa" name="company" id="company">
                         </div>
-                        
                         <div class="col-md-12">
                             <textarea class="form-control" rows="3" name="message" id="message"></textarea>
                             <span id="mail_success_contact" class="success">Tu información fue enviada exitosamente.</span>
@@ -666,7 +665,7 @@
                         <a href="Notice.html" target="_blank">Aviso de privacidad</a>
                     </li>
                     <li class="footer2 footersm ">
-                        <a href="#cta">Contacto</a>
+                        <a href="#contact">Contacto</a>
                     </li>
                 </div>
             </div>
