--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="col-md-8 fadeInLeft wow wowhead wowxs" data-wow-duration="2.5s">
                         <div class="bnr-social">
-                            <ul class="list-inline but ">
+                            <ul class="but hey list-inline">
                                 <li class="list-inline-item">
                                     <a target="_blank" href="https://www.linkedin.com/company/dicio-ai/mycompany/?viewAsMember=true"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
@@ -701,7 +701,7 @@
             <column class="Foot">
                 <div class=" dicio2">
                     <p class="textfoot">info@dicio.ai</p>
-                    <p class="textfoot">Piso 2, iOS Offices, Miyanna Av. Ejército Nacional 769 Granada, Miguel Hidalgo
+                    <p class="textfoot">Piso 2, iOS Offices, Miyana Av. Ejército Nacional 769 Granada, Miguel Hidalgo
                     11520, CDMX</p>
                 </div>
             </column>
